--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dave Rodgers</a>
+        <a class="navbar-brand" href="index.html">Ryan Doty</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
             About Me
         </div>
 
-        <img src="58207856591__6C30DB1C-C28E-4915-9275-3D78860978F2.jpg" alt="myPicture" id="myFace">
+        <img src="/Users/ryandoty/Desktop/0.jpg" alt="myPicture" id="myFace">
 
         <p class="paragraphOne">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit odio iusto repellendus assumenda ipsam, illo asperiores possimus aperiam fugiat ullam unde nemo quae eligendi eveniet commodi voluptas vitae accusamus! Unde!Lorem ipsum dolor sit, amet
